#118 - Big Wizard Integration

--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -300,7 +300,6 @@ foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backu
 foldercreate.dialog.backuperror.title=Unable to backup folder
 foldercreate.dialog.saveinvitation=Save an invitation in the folder
 foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
-foldercreate.dialog.sendinvitation=Send invitations afterwards
 foldercreate.dialog.settings=Enter the settings for the new shared folder
 foldercreate.dialog.title=Create new folder
 foldercreate.dirempty.text=Base directory of folder should not be empty
@@ -450,7 +449,7 @@ general.description=Description
 general.directory=Directory
 general.disconnected=Disconnected
 general.downloads=Downloads
-general.estimatedsize=Estimated size
+general.estimated_size=Estimated size
 general.file=File
 general.files=Files
 general.folder=Folder
@@ -496,7 +495,7 @@ general.uploads=Uploads
 general.user=User
 general.webservice=Online Storage
 general.wednesday=Wednesday
-general.whatisthis=What is this?
+general.what_is_this=What is this?
 general.yesterday=yesterday
 general.accept=Accept
 general.reject=Reject
