--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -107,7 +107,7 @@ clearrecentdownloads.key=v
 clearrecentdownloads.name=Vider
 
 connect.description=Se connecter \u00e0 un utilisateur de Powerfolder
-connect.dialog.text=Entrer l'adresse IP de l'utilisateur auquel vous voulez vous connecter.\n\nPowerFolder se connecte automatiquement au r\u00e9seau apr\u00e8s quelques secondes,\nutilisez cette option pour une connexion manuelle \u00e0 un autre utilisateur.\n 
+connect.dialog.text=Entrer l'adresse IP de l'utilisateur auquel vous voulez vous connecter.\n\nPowerFolder se connecte automatiquement au r\u00e9seau apr\u00e8s quelques secondes,\nutilisez cette option pour une connexion manuelle \u00e0 un autre utilisateur.\n
 connect.dialog.title=Se connecter \u00e0 un utilisateur de PowerFolder
 connect.key=C
 connect.name=Connexion
@@ -502,19 +502,19 @@ general.uploads=Emission
 general.user=Utilisateur
 general.webservice=Sauvegarde en ligne
 general.wednesday=Mercredi
-general.whatisthis=Qu'est-ce que ceci ?
+general.what_is_this=Qu'est-ce que ceci ?
 general.yesterday=Hier
 
-hideoffline.description=Les utilisateurs hors connexion seront retir\u00e9s des r\u00e9sultats 
+hideoffline.description=Les utilisateurs hors connexion seront retir\u00e9s des r\u00e9sultats
 hideoffline.key=H
 hideoffline.name=Cacher les utilisateurs hors connexion
 
-ignorefile.description=Fichier(s) \u00e0 ne pas t\u00e9l\u00e9charger/partager 
+ignorefile.description=Fichier(s) \u00e0 ne pas t\u00e9l\u00e9charger/partager
 ignorefile.key=i
 ignorefile.name=Ajouter un fichier \u00e0 ignorer
 
 imagefileinfo.resolution=R\u00e9solution
-imagefileinfo.unknown=Inconnu 
+imagefileinfo.unknown=Inconnu
 
 infoside.title=Information
 
@@ -608,7 +608,7 @@ networkstatisticspanel.known_users=Utilisateurs connus
 networkstatisticspanel.local_folder_count=Nombre de dossiers locaux (connect\u00e9s)
 networkstatisticspanel.local_folders_size=Taille totale de tous les fichiers locaux
 networkstatisticspanel.number_of_local_files=Nombre total de fichiers locaux
-networkstatisticspanel.number_of_public_files=Nombre total de fichiers disponibles 
+networkstatisticspanel.number_of_public_files=Nombre total de fichiers disponibles
 networkstatisticspanel.online_users=Utilisateurs connect\u00e9s
 networkstatisticspanel.public_folder_count=Nombre de dossiers publics (non connect\u00e9s)
 networkstatisticspanel.public_folders_size=Taille totale de tous les dossiers disponibles
@@ -639,7 +639,7 @@ open_local_folder.description=Ouvrir le dossier via l'explorateur de fichiers
 open_local_folder.key=E
 open_local_folder.name=Explorer le dossier
 
-openchat.description=Ouvrir une fen\u00eatre de discussion avec l'utilisateur ou avec tous les utilisateurs de ce dossier 
+openchat.description=Ouvrir une fen\u00eatre de discussion avec l'utilisateur ou avec tous les utilisateurs de ce dossier
 openchat.key=D
 openchat.name=Discussion
 
@@ -667,7 +667,7 @@ pluginsettings.name=Param\u00e8tres
 
 preferences.description=Editer les pr\u00e9f\u00e9rences
 preferences.dialog.advPort=Port
-preferences.dialog.advPort.tooltip=Au sein d'une m\u00eame liste, saisir une "," pour s\u00e9parer les ports de PowerFolder en \u00e9coute 
+preferences.dialog.advPort.tooltip=Au sein d'une m\u00eame liste, saisir une "," pour s\u00e9parer les ports de PowerFolder en \u00e9coute
 preferences.dialog.advanced.title=Avanc\u00e9
 preferences.dialog.autostartleechfiles=D\u00e9marrage externe du P2P
 preferences.dialog.basedir=Racine de vos dossiers partag\u00e9s
@@ -675,7 +675,7 @@ preferences.dialog.basedir.title=Indiquer le dosier par d\u00e9faut
 preferences.dialog.bind=Adresse de l'interface r\u00e9seau
 preferences.dialog.bind.any=Toute
 preferences.dialog.bind.tooltip=S\u00e9lectionner l'adresse utilis\u00e9e par PowerFolder
-preferences.dialog.bindDescr=Description de l'interface 
+preferences.dialog.bindDescr=Description de l'interface
 preferences.dialog.colortheme=Th\u00e8me de l'interface
 preferences.dialog.createdesktopshortcuts=Raccourcis sur le bureau Windows
 preferences.dialog.debugReports=Activer les journaux de d\u00e9bogage
@@ -699,11 +699,11 @@ preferences.dialog.dyndnsLoginPanel=Login
 preferences.dialog.dyndnsPassword=Mot de passe
 preferences.dialog.dyndnsSettingsTabbedPane=Param\u00e9trage DynDns
 preferences.dialog.dyndnsUpdateButton=Forcer la mise \u00e0 jour
-preferences.dialog.dyndnsUpdateError=Le service DynDns renvoie une erreur\: 
+preferences.dialog.dyndnsUpdateError=Le service DynDns renvoie une erreur\:
 ##preferences.dialog.dyndnsUpdateText=The field {0} can not be empty\!
 preferences.dialog.dyndnsUpdateTitle=Mise \u00e0 jour automatique de DynDns
 preferences.dialog.dyndnsUpdateUnknowError=Le service DynDns renvoie une erreur inconnue.
-preferences.dialog.dyndnsUpdateWarning=Le service DynDns renvoie un message d'erreur\: 
+preferences.dialog.dyndnsUpdateWarning=Le service DynDns renvoie un message d'erreur\:
 preferences.dialog.dyndnsUpdatedIP=Adresse IP DynDns mise \u00e0 jour
 preferences.dialog.dyndnsUserName=Utilisateur
 preferences.dialog.dyndnsmanager.nomatch.text=L'entr\u00e9e DynDns ne correspond pas \u00e0 celle de l'h\u00f4te.
@@ -735,14 +735,14 @@ preferences.dialog.plugin.status_disabled=D\u00e9sactiv\u00e9e
 preferences.dialog.plugin.status_enabled=Activ\u00e9e
 preferences.dialog.plugin.title=Plug-in
 preferences.dialog.randomPort=Trouver un port automatiquement
-preferences.dialog.randomPort.tooltip=PowerFolder identifiera un port disponible 
+preferences.dialog.randomPort.tooltip=PowerFolder identifiera un port disponible
 preferences.dialog.restart.restart=Red\u00e9marrer maintenant
 preferences.dialog.restart.text=des changements n\u00e9cessitent un red\u00e9marrage.
 preferences.dialog.restart.title=Red\u00e9marrage n\u00e9cessaire
 preferences.dialog.showadvanced=Pr\u00e9f\u00e9rences avanc\u00e9es
 preferences.dialog.showpreviewpanel=Active la pr\u00e9visualisation de l'image
 ##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
-preferences.dialog.silentthrottle=Contr\u00f4le de la bande passante 
+preferences.dialog.silentthrottle=Contr\u00f4le de la bande passante
 preferences.dialog.silentthrottle.tooltip=Passe le suivi de la bande passante en mode silencieux (fonctionne uniquement en cas de limite de bande passante diff\u00e9rente de 0)
 preferences.dialog.smalltoolbar=Utiliser la petite barre d'ic\u00c3\u00b4nes
 preferences.dialog.startPanel=Panneau de d\u00e9marrage
@@ -761,7 +761,7 @@ preferences.dialog.titleProcessing=Execution...
 ##preferences.dialog.usedeltaonlan=Use delta sync on LAN
 ##preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
 preferences.dialog.userecyclebin=Utiliser la corbeille (par d\u00e9faut)
-preferences.dialog.useziponlan=Utilise la compression ZIP sur le r\u00e9seau local (LAN) 
+preferences.dialog.useziponlan=Utilise la compression ZIP sur le r\u00e9seau local (LAN)
 preferences.dialog.useziponlan.tooltip=Fonctionne si les fichiers \u00e0 transf\u00e9rer sont simples \u00e0 compresser (ceci peut affecter la charge processeur)
 preferences.dialog.verbose=Activer l'enregistrement complet des \u00e9v\u00e9nements
 preferences.dialog.warnningMessage=Attention
@@ -1110,10 +1110,10 @@ wizard.sendinvitations.sendsuccessinfo=Exp\u00e9dition de l'invitation r\u00e9us
 wizard.sendinvitations.title=Enregistrer une invitation
 wizard.setupdns.dyndnshomepage=Page d'accueil Dyndns
 wizard.setupdns.enterdns=Indiquer votre adresse (dynamique) DNS ou cliquer sur 'Terminer'
-wizard.setupdns.improvesread=Ceci am\u00e9liore la qualit\u00e9 de votre connectivit\u00e9 aupr\u00e8s des autres. 
+wizard.setupdns.improvesread=Ceci am\u00e9liore la qualit\u00e9 de votre connectivit\u00e9 aupr\u00e8s des autres.
 wizard.setupdns.nodnssetup=Vous n'avez pas encore configur\u00e9 d'adresse (dynamique) DNS\!
 wizard.setupdns.title=Configuration facultative du (dynamic) DNS
-##wizard.setupdns.validate=Validate 
+##wizard.setupdns.validate=Validate
 wizard.setupsuccess=Configuration termin\u00e9e avec succ\u00e8s
 ##wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=Vous venez de configurer un dossier dupliqu\u00e9 \!\n
