--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -301,7 +301,6 @@ foldercreate.dialog.backupbyonlinestorage=\u30aa\u30f3\u30e9\u30a4\u30f3\u30b9\u
 ##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
 ##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
-foldercreate.dialog.sendinvitation=\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb\u3092\u3053\u306e\u8a2d\u5b9a\u5f8c\u306b\u9001\u4ed8
 ##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
 ##foldercreate.dialog.title=Create new PowerFolder
 ##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
@@ -455,7 +454,7 @@ general.description=\u8aac\u660e
 general.directory=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 general.disconnected=\u672a\u63a5\u7d9a
 general.downloads=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9 
-general.estimatedsize=\u6982\u7b97\u30b5\u30a4\u30ba
+general.estimated_size=\u6982\u7b97\u30b5\u30a4\u30ba
 general.file=\u30d5\u30a1\u30a4\u30eb
 general.files=\u30d5\u30a1\u30a4\u30eb
 general.folder=\u30d5\u30a9\u30eb\u30c0
@@ -502,7 +501,7 @@ general.uploads=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 general.user=\u30e6\u30fc\u30b6\u30fc
 general.webservice=\u30aa\u30f3\u30e9\u30a4\u30f3 \u30b9\u30c8\u30ec\u30fc\u30b8
 general.wednesday=\u6c34\u66dc\u65e5
-general.whatisthis=\u8a73\u7d30\u306a\u8aac\u660e
+general.what_is_this=\u8a73\u7d30\u306a\u8aac\u660e
 general.yesterday=\u6628\u65e5
 
 hideoffline.description=\u3053\u306e\u691c\u7d22\u7d50\u679c\u304b\u3089\u30aa\u30d5\u30e9\u30a4\u30f3\u30e6\u30fc\u30b6\u30fc\u3092\u9664\u5916\u3057\u3066\u975e\u8868\u793a 
