--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -301,7 +301,6 @@ foldercreate.dialog.backupbyonlinestorage=Backup door Online Opslag
 ##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
 ##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
-foldercreate.dialog.sendinvitation=Verzend invitaties later
 ##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
 ##foldercreate.dialog.title=Create new PowerFolder
 ##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
@@ -455,7 +454,7 @@ general.description=Beschrijving
 ##general.directory=Directory
 general.disconnected=Niet verbonden
 general.downloads=Downloads
-general.estimatedsize=Geschatte omvang
+general.estimated_size=Geschatte omvang
 general.file=Bestand
 general.files=Bestanden
 general.folder=Folder
