--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -388,7 +388,7 @@ folderpanel.hometab.working.title=Przenoszenie folderu
 ##folderpanel.settings.key=S
 folderpanel.settingstab.add_a_pattern.example=przyk\u0142ad/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Wprowad\u017a wzorzec, aby wy\u0142\u0105czy\u0107 pliki z synchronizacji
-folderpanel.settingstab.add_a_pattern.title=Dodaj wzorzec ignorowanych plik\u00f3w 
+folderpanel.settingstab.add_a_pattern.title=Dodaj wzorzec ignorowanych plik\u00f3w
 folderpanel.settingstab.addbutton.description=Dodaj wzorzec, aby wy\u0142\u0105czy\u0107 pliki z synchronizacji
 folderpanel.settingstab.addbutton.key=A
 folderpanel.settingstab.addbutton.name=Dodaj
@@ -398,7 +398,7 @@ folderpanel.settingstab.edit_a_pattern.title=Edytuj wzorzec ignorowanych plik\u0
 folderpanel.settingstab.editbutton.description=Edytuj wz\u00f3r
 folderpanel.settingstab.editbutton.key=E
 folderpanel.settingstab.editbutton.name=Edytuj
-folderpanel.settingstab.ignorepatterns=Wzorce ignorowanych plik\u00f3w 
+folderpanel.settingstab.ignorepatterns=Wzorce ignorowanych plik\u00f3w
 folderpanel.settingstab.removebutton.description=Usu\u0144 wzorzec
 folderpanel.settingstab.removebutton.key=R
 folderpanel.settingstab.removebutton.name=Usu\u0144
@@ -455,7 +455,7 @@ general.description=Opis
 general.directory=Katalog
 general.disconnected=Roz\u0142\u0105czony
 general.downloads=Pobrane
-general.estimatedsize=Szacowany rozmiar
+general.estimated_size=Szacowany rozmiar
 general.file=Plik
 general.files=Pliki
 general.folder=Folder
@@ -469,7 +469,7 @@ general.help=pomoc
 general.hide=schowaj
 general.hours=Godzina
 general.inet=Internet
-general.localcopyat=Lokalna kopia w 
+general.localcopyat=Lokalna kopia w
 general.localcopyplace=Wybierz miejsce dla lokalnej kopii
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=LAN
@@ -502,7 +502,7 @@ general.uploads=Wys\u0142ane
 general.user=U\u017cytkownik
 general.webservice=Archiwum Online
 general.wednesday=\u015aroda
-general.whatisthis=Co to jest?
+general.what_is_this=Co to jest?
 general.yesterday=wczoraj
 
 hideoffline.description=Nie po\u0142\u0105czeni u\u017cytkownicy nie b\u0119d\u0105 wy\u015bwietlani w rezultatach wyszukiwania
@@ -580,7 +580,7 @@ mp3fileinfo.size=Rozmiar
 mp3fileinfo.stereo_mono=Stereo/Mono
 mp3fileinfo.title=Tytu\u0142
 
-myfolderstable._total_number_of_files=W sumie plik\u00f3w\: \# 
+myfolderstable._total_number_of_files=W sumie plik\u00f3w\: \#
 myfolderstable.local_size=Lokalny Rozmiar
 myfolderstable.members=Cz\u0142onkowie
 myfolderstable.number_of_available_files=Dost\u0119pnych\: \#
@@ -606,9 +606,9 @@ navtree.title=Nawigacja
 networkstatisticspanel.connected_users=Po\u0142\u0105czeni u\u017cytkownicy
 networkstatisticspanel.known_users=Rozpoznani u\u017cytkownicy
 networkstatisticspanel.local_folder_count=Liczba lokalnych folder\u00f3w (przy\u0142\u0105czonych)
-networkstatisticspanel.local_folders_size=Ca\u0142kowity rozmiar wszystkich lokalnych plik\u00f3w 
+networkstatisticspanel.local_folders_size=Ca\u0142kowity rozmiar wszystkich lokalnych plik\u00f3w
 networkstatisticspanel.number_of_local_files=Liczba wszystkich lokalnych plik\u00f3w
-networkstatisticspanel.number_of_public_files=Liczba wszystkich dost\u0119pnych plik\u00f3w 
+networkstatisticspanel.number_of_public_files=Liczba wszystkich dost\u0119pnych plik\u00f3w
 networkstatisticspanel.online_users=U\u017cytkownicy online
 networkstatisticspanel.public_folder_count=Liczba publicznych folder\u00f3w (nie przy\u0142\u0105czonych)
 networkstatisticspanel.public_folders_size=Ca\u0142kowity rozmiar dost\u0119pnych plik\u00f3w
@@ -724,7 +724,7 @@ preferences.dialog.networkmode.name=Po\u0142\u0105cz z
 preferences.dialog.networkmode.private=Sie\u0107 lokalna (LAN) oraz Internet
 preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Umo\u017cliwia transfer plikow przez LAN oraz Internet.<BR>Aktualnie \u0142\u0105czy tylko ze znajomymi, u\u017cytkownikami w sieci LAN oraz u\u017cytkownikami przy\u0142\u0105czonymi do folder\u00f3w.<BR>Nast\u0119pnie PowerFolder \u0142\u0105czy z g\u0142\u00f3wnymi w\u0119z\u0142ami, aby znale\u017a\u0107 Twoich znajomych w Internecie.</BODY></HTML>
 preferences.dialog.nickname=Nazwa (nick)
-preferences.dialog.nonwindowsinfo=Uwaga\:   Niekt\u00f3re ustawienia s\u0105 dost\u0119pne tylko w systemie Windows  
+preferences.dialog.nonwindowsinfo=Uwaga\:   Niekt\u00f3re ustawienia s\u0105 dost\u0119pne tylko w systemie Windows
 preferences.dialog.openport=Automatycznie otw\u00f3rz Windows Firewall
 preferences.dialog.openport.tooltip=Otwiera port dla PowerFolder w Windows Firewall
 preferences.dialog.plugin.classname=Java classname
@@ -765,7 +765,7 @@ preferences.dialog.useziponlan=U\u017cyj kompresji ZIP w sieci lokalnej (LAN)
 preferences.dialog.useziponlan.tooltip=W\u0142\u0105cz, je\u015bli pliki przesy\u0142ane przez sie\u0107 mo\u017cna \u0142atwo skompresowa\u0107 (ta opcja mo\u017ce znacznie obci\u0105\u017cy\u0107 procesor)
 preferences.dialog.verbose=W\u0142\u0105cz logowanie wiadomo\u015bci debugowania
 preferences.dialog.warnningMessage=Ostrze\u017cenie
-preferences.dialog.xbehavior=Zachowanie podczas wyj\u015bcia 
+preferences.dialog.xbehavior=Zachowanie podczas wyj\u015bcia
 preferences.dialog.xbehavior.exit=Wyjd\u017a z programu
 preferences.dialog.xbehavior.minimize=Minimalizuj do tacki systemowej
 preferences.key=p
@@ -1113,7 +1113,7 @@ wizard.setupdns.enterdns=Wprowad\u017a sw\u00f3j (dynamiczny) dns
 wizard.setupdns.improvesread=Zwi\u0119ksza Twoj\u0105 osi\u0105galno\u015b\u0107. Nie jest jednak konieczne.
 wizard.setupdns.nodnssetup=Nie zosta\u0142 jeszcze skonfigurowany (dynamiczny) dns\!
 wizard.setupdns.title=Konfiguruj (dynamiczny) dns
-##wizard.setupdns.validate=Validate 
+##wizard.setupdns.validate=Validate
 wizard.setupsuccess=Konfiguracja zako\u0144czona pomy\u015blnie
 ##wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=Pomy\u015blnie skonfigurowano folder lustrzany\!\n
