--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -301,7 +301,6 @@ foldercreate.dialog.backupbyonlinestorage=\u0421\u043e\u0437\u0434\u0430\u0442\u
 ##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
 ##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
-foldercreate.dialog.sendinvitation=\u041f\u043e\u0441\u043b\u0430\u0442\u044c \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u044f \u043f\u043e\u0441\u043b\u0435
 ##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
 ##foldercreate.dialog.title=Create new PowerFolder
 ##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
@@ -455,7 +454,7 @@ general.description=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435
 general.directory=\u0414\u0438\u0440\u0435\u043a\u0442\u043e\u0440\u0438\u044f
 general.disconnected=\u041e\u0442\u043a\u043b\u044e\u0447\u0435\u043d
 general.downloads=\u0421\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u044f
-general.estimatedsize=\u043f\u0440\u0438\u043c\u0435\u0440\u043d\u044b\u0439 \u0440\u0430\u0437\u043c\u0435\u0440
+general.estimated_size=\u043f\u0440\u0438\u043c\u0435\u0440\u043d\u044b\u0439 \u0440\u0430\u0437\u043c\u0435\u0440
 general.file=\u0424\u0430\u0439\u043b
 general.files=\u0424\u0430\u0439\u043b\u044b
 general.folder=\u041f\u0430\u043f\u043a\u0430
@@ -502,7 +501,7 @@ general.uploads=\u0417\u0430\u0433\u0440\u0443\u0437\u043a\u0438
 general.user=\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c
 general.webservice=\u041e\u043d\u043b\u0430\u0439\u043d \u0425\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0435
 general.wednesday=\u0421\u0440\u0435\u0434\u0430
-general.whatisthis=\u0427\u0442\u043e \u044d\u0442\u043e?
+general.what_is_this=\u0427\u0442\u043e \u044d\u0442\u043e?
 general.yesterday=\u0432\u0447\u0435\u0440\u0430
 
 hideoffline.description=\u041d\u0435 \u043f\u043e\u043a\u0430\u0437\u044b\u0432\u0430\u0442\u044c \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0435\u0439 \u043d\u0435 \u0432 \u0441\u0435\u0442\u0438
