--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -301,7 +301,6 @@ foldercreate.dialog.backupbyonlinestorage=\u0646\u0633\u062e\u0629 \u0627\u062d\
 ##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
 ##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
-foldercreate.dialog.sendinvitation=\u0623\u0631\u0633\u0644 \u0627\u0644\u062f\u0639\u0648\u0627\u062a \u0641\u064a\u0645\u0627 \u0628\u0639\u062f
 ##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
 ##foldercreate.dialog.title=Create new PowerFolder
 ##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
@@ -455,7 +454,7 @@ general.description=\u0627\u0644\u0648\u0635\u0641
 general.directory=\u0627\u0644\u0645\u0633\u0627\u0631
 general.disconnected=\u063a\u064a\u0631 \u0645\u062a\u0635\u0644
 general.downloads=\u0627\u0644\u062a\u062d\u0645\u064a\u0644\u0627\u062a
-general.estimatedsize=\u0627\u0644\u062d\u062c\u0645 \u0627\u0644\u0645\u0642\u062f\u0631
+general.estimated_size=\u0627\u0644\u062d\u062c\u0645 \u0627\u0644\u0645\u0642\u062f\u0631
 general.file=\u0645\u0644\u0641
 general.files=\u0645\u0644\u0641\u0627\u062a
 general.folder=\u0645\u062c\u0644\u062f
@@ -502,7 +501,7 @@ general.uploads=\u0631\u0641\u0639 \u0627\u0644\u0645\u0644\u0641\u0627\u062a
 general.user=\u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645
 general.webservice=\u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u062e\u0632\u064a\u0646 \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
 general.wednesday=\u0627\u0644\u0627\u0631\u0628\u0639\u0627\u0621
-general.whatisthis=\u0645\u0627\u0647\u0630\u0627?
+general.what_is_this=\u0645\u0627\u0647\u0630\u0627?
 general.yesterday=\u0627\u0644\u0628\u0627\u0631\u062d\u0629
 
 hideoffline.description=\u0633\u0648\u0641 \u064a\u062a\u0645 \u0627\u0633\u062a\u0628\u0639\u0627\u062f \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645\u064a\u0646 \u0627\u0644\u063a\u064a\u0631 \u0645\u0648\u062c\u0648\u062f\u064a\u0646 \u0639\u0644\u0649 \u0627\u0644\u062e\u0637 \u0645\u0646 \u0647\u0630\u0627 \u0627\u0644\u0628\u062d\u062b
