--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -301,7 +301,6 @@ foldercreate.dialog.backupbyonlinestorage=Backup auf Online Speicher
 ##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
 ##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
-foldercreate.dialog.sendinvitation=Einladung versenden
 ##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
 ##foldercreate.dialog.title=Create new PowerFolder
 ##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
@@ -455,7 +454,7 @@ general.description=Beschreibung
 general.directory=Verzeichnis
 general.disconnected=Nicht verbunden
 general.downloads=Downloads
-general.estimatedsize=gesch\u00e4tzte Gr\u00f6\u00dfe
+general.estimated_size=gesch\u00e4tzte Gr\u00f6\u00dfe
 general.file=Datei
 general.files=Dateien
 general.folder=Folder
@@ -502,7 +501,7 @@ general.uploads=Uploads
 general.user=Benutzer
 general.webservice=Online Speicher
 general.wednesday=Mittwoch
-general.whatisthis=Was ist das?
+general.what_is_this=Was ist das?
 general.yesterday=Gestern
 
 hideoffline.description=Es werden nur Benutzer angezeigt, die gerade online sind 
