--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -301,7 +301,6 @@ foldercreate.dialog.backupbyonlinestorage=Respaldo con Almacenamiento en linea
 ##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
 ##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
-foldercreate.dialog.sendinvitation=Mandar las invitaciones despu\u00e9s
 ##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
 ##foldercreate.dialog.title=Create new PowerFolder
 ##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
@@ -455,7 +454,7 @@ general.description=Descripci\u00f3n
 general.directory=Director
 general.disconnected=Desconectado
 general.downloads=Descargas
-general.estimatedsize=Tama\u00f1o estimado
+general.estimated_size=Tama\u00f1o estimado
 general.file=Archivo
 general.files=Archivos
 general.folder=Carpeta
@@ -502,7 +501,7 @@ general.uploads=Env\u00edos
 general.user=Usuario
 general.webservice=Almacenamiento en linea
 general.wednesday=Mi\u00e9rcoles
-general.whatisthis=Que es esto?
+general.what_is_this=Que es esto?
 general.yesterday=ayer
 
 hideoffline.description=Los usuarios offline ser\u00e1n filtrados de esta b\u00fasqueda
