--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -301,7 +301,6 @@ foldercreate.dialog.backupbyonlinestorage=\u7528\u5728\u7ebf\u5b58\u50a8\u5907\u
 ##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
 ##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
-foldercreate.dialog.sendinvitation=\u4ee5\u540e\u53d1\u9001\u9080\u8bf7
 ##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
 ##foldercreate.dialog.title=Create new PowerFolder
 ##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
@@ -455,7 +454,7 @@ general.description=\u63cf\u8ff0
 general.directory=\u6587\u4ef6\u5939
 general.disconnected=\u65ad\u5f00\u8fde\u63a5
 general.downloads=\u4e0b\u8f7d
-general.estimatedsize=\u4f30\u8ba1\u5927\u5c0f
+general.estimated_size=\u4f30\u8ba1\u5927\u5c0f
 general.file=\u6587\u4ef6
 general.files=\u6587\u4ef6
 general.folder=\u6587\u4ef6\u5939
@@ -502,7 +501,7 @@ general.uploads=\u4e0a\u4f20
 general.user=\u7528\u6237
 general.webservice=\u5728\u7ebf\u5b58\u50a8
 general.wednesday=\u661f\u671f\u4e09
-general.whatisthis=\u8fd9\u662f\u4ec0\u4e48\uff1f
+general.what_is_this=\u8fd9\u662f\u4ec0\u4e48\uff1f
 general.yesterday=\u6628\u5929
 
 hideoffline.description=\u5728\u641c\u7d22\u7ed3\u679c\u4e2d\u8fc7\u6ee4\u5230\u79bb\u7ebf\u7528\u6237
