815 - Chnge button to Leave, and add preview cb.

--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -340,13 +340,13 @@ folderjoin.secret=\u0633\u0631\u064a
 folderjoin.warning.notempty.text=\u0645\u0633\u0627\u0631 \u0627\u0644\u0646\u0633\u062e \u0627\u0644\u0645\u062d\u0644\u064a \u0644\u0644\u0645\u062c\u0644\u062f '{0}' \u063a\u064a\u0631 \u0641\u0627\u0631\u063a.\n\u062c\u0645\u064a\u0639 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u0648\u062c\u0648\u062f\u0629 \u0647\u0646\u0627\u0643 \u0633\u0648\u0641 \u064a\u062a\u0645 \u0631\u0641\u0639\u0647\u0627 \u0625\u0644\u0649 \u0645\u0633\u062a\u062e\u062f\u0645\u064a\u0647\u0627 .\n\u0647\u0644 \u062a\u0631\u064a\u062f \u0628\u0627\u0644\u062a\u0623\u0643\u064a\u062f \u0648\u0636\u0639 \u0627\u0644\u0646\u0633\u062e \u0627\u0644\u0645\u062d\u0644\u064a \u0644\u0647\u0630\u0627 \u0627\u0644\u0645\u062c\u0644\u062f \u0641\u064a \n'{1}'?
 folderjoin.warning.notempty.title=\u0642\u0627\u0639\u062f\u0629 \u0627\u0644\u0645\u0633\u0627\u0631 \u0627\u0644\u0645\u062d\u0644\u064a \u063a\u064a\u0631 \u0641\u0627\u0631\u063a\u0629
 
-##folderleave.description=Leave this PowerFolder
-folderleave.dialog.delete=\u0645\u0633\u062d \u0627\u0644\u0645\u0639\u0644\u0648\u0645\u0627\u062a
-folderleave.dialog.sync_warning=\u0627\u0644\u0645\u062c\u0644\u062f \u0642\u064a\u062f \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629 \!
-##folderleave.dialog.text=Leave PowerFolder {0}?
-##folderleave.dialog.title=Leave PowerFolder {0}?
-folderleave.key=\u0645
-folderleave.name=\u0623\u062a\u0631\u0643 \u0627\u0644\u0645\u062c\u0644\u062f
+##folder_leave.description=Leave this PowerFolder
+folder_leave.dialog.delete=\u0645\u0633\u062d \u0627\u0644\u0645\u0639\u0644\u0648\u0645\u0627\u062a
+folder_leave.dialog.sync_warning=\u0627\u0644\u0645\u062c\u0644\u062f \u0642\u064a\u062f \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629 \!
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=\u0645
+folder_leave.name=\u0623\u062a\u0631\u0643 \u0627\u0644\u0645\u062c\u0644\u062f
 
 foldermove.progress.text=\u0646\u0642\u0644 \u0627\u0644\u0645\u062c\u0644\u062f  '{0}'
 foldermove.progress.title=\u062a\u0645 \u0646\u0642\u0644 \u0627\u0644\u0645\u062c\u0644\u062f
