--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -340,13 +340,13 @@ folderjoin.secret=geheim
 folderjoin.warning.notempty.text=Der von Ihnen angegebene Ort des Folders '{0}' ist nicht leer.\nAlle dort befindlichen Dateien werden freigegeben\!\nSind Sie sicher das Folder an diesem Ort \n'{1}' anzulegen ?
 folderjoin.warning.notempty.title=Lokales Verzeichnis nicht leer
 
-##folderleave.description=Leave this PowerFolder
-folderleave.dialog.delete=Meta-informationen l\u00f6schen
-folderleave.dialog.sync_warning=Der Folder wird gerade synchronisiert\!
-##folderleave.dialog.text=Leave PowerFolder {0}?
-##folderleave.dialog.title=Leave PowerFolder {0}?
-folderleave.key=V
-folderleave.name=Folder verlassen
+##folder_leave.description=Leave this PowerFolder
+folder_leave.dialog.delete=Meta-informationen l\u00f6schen
+folder_leave.dialog.sync_warning=Der Folder wird gerade synchronisiert\!
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=V
+folder_leave.name=Folder verlassen
 
 foldermove.progress.text=Verschiebe Folder '{0}'
 foldermove.progress.title=Folder verschieben
