--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -339,13 +339,13 @@ folderjoin.secret=Secret
 folderjoin.warning.notempty.text=The directory for the local copy of folder '{0}' is not empty.\nAll files contained there will be uploaded to its members.\nAre you sure you want to place the local copy of this folder at\n'{1}'?
 folderjoin.warning.notempty.title=Local base directory not empty
 
-folderleave.description=Leave this folder (Stop sharing and downloading data)
-folderleave.dialog.delete=Delete meta-data
-folderleave.dialog.sync_warning=The folder is currently synchronising\!
-folderleave.dialog.text=Leave folder {0}?
-folderleave.dialog.title=Leave folder {0}?
-folderleave.key=L
-folderleave.name=Leave Folder
+folder_leave.description=Leave this folder (Stop sharing and downloading data)
+folder_leave.dialog.delete=Delete meta-data
+folder_leave.dialog.sync_warning=The folder is currently synchronising\!
+folder_leave.dialog.text=Leave folder {0}?
+folder_leave.dialog.title=Leave folder {0}?
+folder_leave.key=L
+folder_leave.name=Leave Folder
 
 foldermove.progress.text=Moving folder '{0}'
 foldermove.progress.title=Folder Move
