--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -341,13 +341,13 @@ folderjoin.secret=Segreta
 folderjoin.warning.notempty.text=La directory per la copia locale della cartella '{0}' non \u00E8 vuota.\nTutti i file contenuti al suo interno verranno trasferiti ai suoi membri.\nSei sicuro di mettere la copia locale di questa cartella a\n'{1}' ?
 folderjoin.warning.notempty.title=La directory base locale non \u00E8 vuota
 
-folderleave.description=Esci da questo PowerFolder
-folderleave.dialog.delete=Cancella i meta-data
-folderleave.dialog.sync_warning=La cartella si sta sincronizzando\!
-folderleave.dialog.text=Uscire da questo PowerFolder {0}?
-folderleave.dialog.title=Uscire da questo PowerFolder {0}?
-folderleave.key=E
-folderleave.name=Esci dalla cartella
+folder_leave.description=Esci da questo PowerFolder
+folder_leave.dialog.delete=Cancella i meta-data
+folder_leave.dialog.sync_warning=La cartella si sta sincronizzando\!
+folder_leave.dialog.text=Uscire da questo PowerFolder {0}?
+folder_leave.dialog.title=Uscire da questo PowerFolder {0}?
+folder_leave.key=E
+folder_leave.name=Esci dalla cartella
 
 foldermove.progress.text=Spostamento della cartella '{0}'
 foldermove.progress.title=Spostamento cartella
