--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -340,13 +340,13 @@ folderjoin.secret=\u30b7\u30fc\u30af\u30ec\u30c3\u30c8
 folderjoin.warning.notempty.text=\u30d5\u30a9\u30eb\u30c0 '{0}' \u306e\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u304c\u3042\u308b\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306f\u7a7a\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002\n\u305d\u306e\u5834\u6240\u306e\u3059\u3079\u3066\u306e\u30d5\u30a1\u30a4\u30eb\u306f\u30d5\u30a9\u30eb\u30c0\u306e\u30e1\u30f3\u30d0\u30fc\u306b\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3059\u3002\n\u672c\u5f53\u306b\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306e\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u3092\u4ee5\u4e0b\u306e\u5834\u6240\u306b\u4fdd\u5b58\u3057\u307e\u3059\u304b\uff1f\n'{1}'
 folderjoin.warning.notempty.title=\u7a7a\u3067\u306f\u306a\u3044\u30ed\u30fc\u30ab\u30eb\u306e\u57fa\u672c\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 
-##folderleave.description=Leave this PowerFolder
-folderleave.dialog.delete=\u30e1\u30bf\u30c7\u30fc\u30bf\u306e\u524a\u9664
-folderleave.dialog.sync_warning=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306f\u73fe\u5728\u540c\u671f\u4e2d\u3067\u3059\uff01
-##folderleave.dialog.text=Leave PowerFolder {0}?
-##folderleave.dialog.title=Leave PowerFolder {0}?
-folderleave.key=L
-folderleave.name=\u30d5\u30a9\u30eb\u30c0\u9000\u907f(L)
+##folder_leave.description=Leave this PowerFolder
+folder_leave.dialog.delete=\u30e1\u30bf\u30c7\u30fc\u30bf\u306e\u524a\u9664
+folder_leave.dialog.sync_warning=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306f\u73fe\u5728\u540c\u671f\u4e2d\u3067\u3059\uff01
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=L
+folder_leave.name=\u30d5\u30a9\u30eb\u30c0\u9000\u907f(L)
 
 foldermove.progress.text='{0}' \u30d5\u30a9\u30eb\u30c0\u79fb\u52d5\u4e2d
 foldermove.progress.title=\u30d5\u30a9\u30eb\u30c0\u79fb\u52d5
