--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -341,13 +341,13 @@ folderjoin.secret=Prywatny
 folderjoin.warning.notempty.text=Folder lokalnej kopii '{0}' nie jest pusty.\nWszystkie pliki zostan\u0105 wys\u0142ane do u\u017cytkownik\u00f3w przy\u0142\u0105czonych do folderu.\nCzy na pewno chcesz umie\u015bci\u0107 lokaln\u0105 kopi\u0119 tego folderu w \n'{1}'?
 folderjoin.warning.notempty.title=Lokalny folder bazowy nie jest pusty
 
-##folderleave.description=Leave this PowerFolder
-folderleave.dialog.delete=Usu\u0144 meta-dane
-folderleave.dialog.sync_warning=Ten folder jest w trakcie synchronizacji\!
-##folderleave.dialog.text=Leave PowerFolder {0}?
-##folderleave.dialog.title=Leave PowerFolder {0}?
-folderleave.key=L
-folderleave.name=Opu\u015b\u0107 Folder
+##folder_leave.description=Leave this PowerFolder
+folder_leave.dialog.delete=Usu\u0144 meta-dane
+folder_leave.dialog.sync_warning=Ten folder jest w trakcie synchronizacji\!
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=L
+folder_leave.name=Opu\u015b\u0107 Folder
 
 foldermove.progress.text=Przenoszenie folderu '{0}'
 foldermove.progress.title=Przenoszenie Folderu
