--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -340,13 +340,13 @@ folderjoin.secret=Privat
 folderjoin.warning.notempty.text=Mappen f\u00f6r den lokala kopian av foldern '{0}' \u00e4r inte tom.\nAlla filersom finns i mappen kommer att ladddas upp till folderns samtliga medlemmar.\n\u00c4r du verkligen s\u00e4ker p\u00e5 att du vill placera den lokala kopian av foldern i\n'{1}' ?
 folderjoin.warning.notempty.title=Lokal bas-mapp \u00e4r inte tom
 
-##folderleave.description=Leave this PowerFolder
-##folderleave.dialog.delete=Delete meta-data
-folderleave.dialog.sync_warning=Foldern h\u00e5ller p\u00e5 att synkroniseras\!
-##folderleave.dialog.text=Leave PowerFolder {0}?
-##folderleave.dialog.title=Leave PowerFolder {0}?
-folderleave.key=L
-folderleave.name=L\u00e4mna folder
+##folder_leave.description=Leave this PowerFolder
+##folder_leave.dialog.delete=Delete meta-data
+folder_leave.dialog.sync_warning=Foldern h\u00e5ller p\u00e5 att synkroniseras\!
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=L
+folder_leave.name=L\u00e4mna folder
 
 ##foldermove.progress.text=Moving folder '{0}'
 ##foldermove.progress.title=Folder Move
