--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -340,13 +340,13 @@ folderjoin.secret=\u79c1\u6709
 folderjoin.warning.notempty.text=\u6587\u4ef6\u5939 '{0}' \u672c\u5730\u526f\u672c\u7684\u76ee\u5f55\u975e\u7a7a\u3002\n\u6587\u4ef6\u5939\u4e0b\u7684\u6587\u4ef6\u5c06\u88ab\u4e0a\u4f20\u7ed9\u5176\u4ed6\u6210\u5458\u3002\n\u4f60\u786e\u5b9a\u8981\u628a\u6587\u4ef6\u5939\u7684\u672c\u5730\u526f\u672c\u653e\u5728\n'{1}' ?
 folderjoin.warning.notempty.title=\u672c\u5730\u6839\u76ee\u5f55\u975e\u7a7a
 
-##folderleave.description=Leave this PowerFolder
-folderleave.dialog.delete=\u5220\u9664\u5143\u6570\u636e
-folderleave.dialog.sync_warning=\u6b64\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65\!
-##folderleave.dialog.text=Leave PowerFolder {0}?
-##folderleave.dialog.title=Leave PowerFolder {0}?
-folderleave.key=L
-folderleave.name=\u79bb\u5f00\u6587\u4ef6\u5939
+##folder_leave.description=Leave this PowerFolder
+folder_leave.dialog.delete=\u5220\u9664\u5143\u6570\u636e
+folder_leave.dialog.sync_warning=\u6b64\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65\!
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=L
+folder_leave.name=\u79bb\u5f00\u6587\u4ef6\u5939
 
 foldermove.progress.text=\u6b63\u5728\u79fb\u52a8\u6587\u4ef6\u5939 '{0}'
 foldermove.progress.title=\u79fb\u52a8\u6587\u4ef6\u5939
