--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -340,13 +340,13 @@ folderjoin.secret=Secreta
 folderjoin.warning.notempty.text=El directorio para la copia local de la carpeta '{0}' no est\u00e1 vac\u00edo.\nTodos los archivos all\u00ed contenidos se enviar\u00e1n a los miembros.\n\u00bfEst\u00e1 seguro de ubicar la copia local en\n'{1}' ?
 folderjoin.warning.notempty.title=La ubicaci\u00f3n local no est\u00e1 vac\u00eda
 
-##folderleave.description=Leave this PowerFolder
-folderleave.dialog.delete=Borrar meta-data
-folderleave.dialog.sync_warning=La carpeta se esta sincronizando\!
-##folderleave.dialog.text=Leave PowerFolder {0}?
-##folderleave.dialog.title=Leave PowerFolder {0}?
-folderleave.key=A
-folderleave.name=Abandonar carpeta
+##folder_leave.description=Leave this PowerFolder
+folder_leave.dialog.delete=Borrar meta-data
+folder_leave.dialog.sync_warning=La carpeta se esta sincronizando\!
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=A
+folder_leave.name=Abandonar carpeta
 
 foldermove.progress.text=Moviendo carpeta '{0}'
 foldermove.progress.title=Carpeta en movimiento
