--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -341,13 +341,13 @@ folderjoin.secret=Priv\u00e9
 folderjoin.warning.notempty.text=Le r\u00e9pertoire pour la copie local du dossier '{0}' n'est pas vide.\nTous les fichiers contenus seront envoy\u00e9s aux membres concern\u00e9s.\nEtes-vous s\u00fbr d'effectuer le d\u00e9placement d'une copie dans\n'{1}' ?
 folderjoin.warning.notempty.title=Le r\u00e9pertoire racine n'est pas vide
 
-##folderleave.description=Leave this PowerFolder
-folderleave.dialog.delete=Supprimer les meta-data
-folderleave.dialog.sync_warning=Le dossier est actuellement en synchronisation\!
-##folderleave.dialog.text=Leave PowerFolder {0}?
-##folderleave.dialog.title=Leave PowerFolder {0}?
-folderleave.key=F
-folderleave.name=Fermer le dossier
+##folder_leave.description=Leave this PowerFolder
+folder_leave.dialog.delete=Supprimer les meta-data
+folder_leave.dialog.sync_warning=Le dossier est actuellement en synchronisation\!
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=F
+folder_leave.name=Fermer le dossier
 
 foldermove.progress.text=D\u00e9placement du dossier '{0}'
 foldermove.progress.title=D\u00e9placement de dossier
