--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -340,13 +340,13 @@ folderjoin.secret=Geheim
 folderjoin.warning.notempty.text=De map voor de lokale kopie van de folder '{0}' is niet leeg.\nAlle bestanden aanwezig daar kunnen worden verzonden aan deelnemers in de folder.\nWeet u zeker dat de lokale kopie van de folder hier geplaatst moet worden\n'{1}' ?
 folderjoin.warning.notempty.title=Lokale basis map niet leeg
 
-##folderleave.description=Leave this PowerFolder
-##folderleave.dialog.delete=Delete meta-data
-folderleave.dialog.sync_warning=De folder is momenteel aan het synchronizeren\!
-##folderleave.dialog.text=Leave PowerFolder {0}?
-##folderleave.dialog.title=Leave PowerFolder {0}?
-folderleave.key=V
-folderleave.name=Verlaat folder
+##folder_leave.description=Leave this PowerFolder
+##folder_leave.dialog.delete=Delete meta-data
+folder_leave.dialog.sync_warning=De folder is momenteel aan het synchronizeren\!
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=V
+folder_leave.name=Verlaat folder
 
 foldermove.progress.text=Verplaatsen van folder '{0}'
 foldermove.progress.title=Verplaats folder
