--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -340,13 +340,13 @@ folderjoin.secret=\u0441\u0435\u043a\u0440\u0435\u0442\u043d\u043e
 folderjoin.warning.notempty.text=\u0423\u043a\u0430\u0437\u0430\u043d\u043e\u0435 \u043c\u0435\u0441\u0442\u043e \u041f\u0430\u043f\u043a\u0438 '{0}' \u043d\u0435 \u043f\u0443\u0441\u0442\u043e\u0435.\n\u0412\u0441\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u044b\u0435 \u0432 \u043d\u0435\u0439 \u0444\u0430\u0439\u043b\u044b \u0431\u0443\u0434\u0443\u0442 \u0441\u0442\u0430\u043d\u0443\u0442 \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u043c\u0438\!\n\u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d\u044b, \u0447\u0442\u043e \u0445\u043e\u0442\u0438\u0442\u0435 \u0440\u0435\u0437\u043c\u0435\u0441\u0442\u0438\u0442\u044c \u043f\u0430\u043f\u043a\u0443 \u0432 \n'{1}' ?
 folderjoin.warning.notempty.title=\u041b\u043e\u043a\u0430\u043b\u044c\u043d\u0430\u044f \u041f\u0430\u043f\u043a\u0430 \u043d\u0435 \u043f\u0443\u0441\u0442\u0430\u044f
 
-##folderleave.description=Leave this PowerFolder
-folderleave.dialog.delete=\u0423\u0434\u0430\u043b\u0438\u0442\u044c \u043c\u0435\u0442\u0430\u0434\u0430\u043d\u043d\u044b\u0435
-folderleave.dialog.sync_warning=\u0414\u0430\u043d\u043d\u0430\u044f \u041f\u0430\u043f\u043a\u0430 \u0432 \u0434\u0430\u043d\u043d\u044b\u0439 \u043c\u043e\u043c\u0435\u043d\u0442 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442\u0441\u044f\!
-##folderleave.dialog.text=Leave PowerFolder {0}?
-##folderleave.dialog.title=Leave PowerFolder {0}?
-folderleave.key=L
-folderleave.name=\u041f\u043e\u043a\u0438\u043d\u0443\u0442\u044c \u041f\u0430\u043f\u043a\u0443
+##folder_leave.description=Leave this PowerFolder
+folder_leave.dialog.delete=\u0423\u0434\u0430\u043b\u0438\u0442\u044c \u043c\u0435\u0442\u0430\u0434\u0430\u043d\u043d\u044b\u0435
+folder_leave.dialog.sync_warning=\u0414\u0430\u043d\u043d\u0430\u044f \u041f\u0430\u043f\u043a\u0430 \u0432 \u0434\u0430\u043d\u043d\u044b\u0439 \u043c\u043e\u043c\u0435\u043d\u0442 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442\u0441\u044f\!
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=L
+folder_leave.name=\u041f\u043e\u043a\u0438\u043d\u0443\u0442\u044c \u041f\u0430\u043f\u043a\u0443
 
 foldermove.progress.text=\u041f\u0435\u0440\u0435\u043c\u0435\u0449\u0435\u043d\u0438\u0435 \u043f\u0430\u043f\u043a\u0438 '{0}'
 foldermove.progress.title=\u041f\u0435\u0440\u0435\u043c\u0435\u0449\u0435\u043d\u0438\u0435 \u043f\u0430\u043f\u043a\u0438
